--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,6 +12,9 @@
   overflow: hidden;
   background: #d7d6d6;
   cursor: grab;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .game-board-grid {
