Improve drag and zoom

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,9 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* CSS Variables */
+  --game-board-size: 400px;
 }
 
 a {
