--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,8 +19,8 @@
 
 .game-board-grid {
   display: grid;
-  grid-template-columns: repeat(2, 300px);
-  grid-template-rows: repeat(2, 300px);
+  grid-template-columns: repeat(2, var(--game-board-size));
+  grid-template-rows: repeat(2, var(--game-board-size));
   transform-origin: center;
   transition: transform 0.05s ease-out;
   z-index: 10;
@@ -34,9 +34,8 @@
   justify-content: center;
   font-size: 1rem;
   color: #ddd;
-  /* padding: 1rem; */
-  width: 300px;
-  height: 300px;
+  width: var(--game-board-size);
+  height: var(--game-board-size);
 }
 
 .overlay-wrapper {
