--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,8 +19,8 @@
 
 .game-board-grid {
   display: grid;
-  grid-template-columns: repeat(2, var(--game-board-size));
-  grid-template-rows: repeat(2, var(--game-board-size));
+  grid-template-columns: repeat(1.5, var(--game-board-size));
+  grid-template-rows: repeat(1.5, var(--game-board-size));
   transform-origin: center;
   transition: transform 0.05s ease-out;
   z-index: 10;
@@ -51,6 +51,10 @@
 .overlay-item {
   position: relative;
   z-index: 11;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .overlay-dragging .overlay-item {
@@ -75,4 +79,15 @@
   filter: drop-shadow(0 8px 4px rgba(0, 0, 0, 0.3))
     drop-shadow(0 0 10px rgba(139, 0, 0, 0.7));
   position: relative;
+}
+
+.tile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
