--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,7 @@
   color: #ddd;
   width: var(--game-board-size);
   height: var(--game-board-size);
+  position: relative;
 }
 
 .overlay-wrapper {
@@ -90,4 +91,39 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+}
+
+.tile-grid-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  z-index: 1;
+}
+
+.grid-cell {
+  /* border: 1px solid rgb(221, 36, 36); */
+  box-sizing: border-box;
+  padding: 1.2rem;
+  z-index: 10;
+}
+
+.grid-cell:hover {
+  background-color: #f1f1f157;
+  border-radius: 10px;
+  margin: 0.25rem;
+}
+
+.grid-cell-inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid #13c543; */
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
