Add proper rotation

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,6 +78,11 @@
   position: absolute;
   text-align: center;
   width: 100%;
+  pointer-events: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .tile-image {
