--- a/client/src/components/Overlay/Footer.css
+++ b/client/src/components/Overlay/Footer.css
@@ -24,10 +24,10 @@
 
 .footer-panel {
   position: fixed;
-  bottom: -300px;
+  bottom: -40vh;
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 40vh;
   background-color: rgba(0, 0, 0, 0.66);
   color: #fff;
   padding: 1rem;
