--- a/client/src/components/GameBoard/GameBoard.css
+++ b/client/src/components/GameBoard/GameBoard.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background: #d7d6d6;
+  background: #505050;
   display: flex;
   align-items: center;
   justify-content: center;
