Add board rotation

--- a/client/src/components/Overlay/Header.css
+++ b/client/src/components/Overlay/Header.css
@@ -1,7 +1,7 @@
 .header-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: left;
 }
 
 .header-title {
