--- a/client/src/components/Overlay/Overlay.css
+++ b/client/src/components/Overlay/Overlay.css
@@ -30,6 +30,13 @@
   height: 80%;
 }
 
+.left-side-bar {
+  position: absolute;
+  top: 7%;
+  margin-right: 1rem;
+  height: 80%;
+}
+
 .side-panel {
   position: relative;
   right: 1rem;
