--- a/client/src/components/GameBoard/GameBoard.css
+++ b/client/src/components/GameBoard/GameBoard.css
@@ -30,42 +30,51 @@
 }
 
 .tile-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-  }
-  
-  .tile-grid-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    z-index: 1;
-  }
-  
-  .grid-cell {
-    /* border: 1px solid rgb(221, 36, 36); */
-    box-sizing: border-box;
-    padding: 1.2rem;
-    z-index: 10;
-  }
-  
-  /* .grid-cell:hover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.tile-grid-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  z-index: 1;
+}
+
+.grid-cell {
+  /* border: 1px solid rgb(221, 36, 36); */
+  box-sizing: border-box;
+  /* padding: 1.2rem; */
+  z-index: 10;
+}
+
+.door {
+  position: relative;
+  width: 45px;
+  height: 10px;
+  background: green;
+  z-index: 13;
+
+}
+
+/* .grid-cell:hover {
     background-color: #f1f1f157;
     border-radius: 10px;
     margin: 0.75rem;
   } */
-  
-  /* .grid-cell-inner {
+
+/* .grid-cell-inner {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -75,7 +84,7 @@
     position: relative;
   } */
 
-  /* I'll keep this as a maybe for the future */
+/* I'll keep this as a maybe for the future */
 
 /* .grid-cell:hover {
  background-color: #f1f1f157;
@@ -111,4 +120,3 @@
   width: 100%;
   position: relative;
 } */
-
